add copyAll method page.

--- a/homebox-file/src/main/resources/static/index.html
+++ b/homebox-file/src/main/resources/static/index.html
@@ -337,6 +337,8 @@
                     <li>
                         <a href="#"><i class="fa fa-picture-o"></i> <span class="nav-label">相册</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
+                            <li><a class="J_menuItem" href="photo_organize.html">相册整理</a>
+                            </li>
                             <li><a class="J_menuItem" href="basic_gallery.html">基本图库</a>
                             </li>
                             <li><a class="J_menuItem" href="carousel.html">图片切换</a>
