file Copy Function.

--- a/homebox-file/src/main/resources/static/copyFile.html
+++ b/homebox-file/src/main/resources/static/copyFile.html
@@ -12,7 +12,7 @@
     <form id="copyAll">
         来源路径：<input type="text" name="fromPath">
         目标路径：<input type="text" name="toPath">
-        分组类型：<select name="groupType">
+        分组类型：<select name="groupStrategy">
                     <option value="NONE">NONE</option>
                     <option value="DATE_FORMAT_YYYY">年</option>
                     <option value="DATE_FORMAT_YYYY_MM">年-月</option>
