--- a/homebox-file/src/main/resources/static/photo_organize.html
+++ b/homebox-file/src/main/resources/static/photo_organize.html
@@ -63,7 +63,7 @@
                                     <label class="form-control">分组类型：</label>
                                 </div>
                                 <div class="col-sm-4">
-                                    <select name="groupType" class="form-control">
+                                    <select name="groupStrategy" class="form-control">
                                         <option value="NONE">NONE</option>
                                         <option value="DATE_FORMAT_YYYY">年</option>
                                         <option value="DATE_FORMAT_YYYY_MM">年-月</option>
